--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi! I am Anthony.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Charlotte, NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy travelling and playing the piano.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Motivational Speaker</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Charlotte, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I thoroughly enjoy creative processes.</p>
     </section>
 
     <footer id="footer">
